# funk

./: makefile  pyproject.toml  readme.md
funk/: __init__.py  __main__.py  init.ct  main.ct
